--- a/KMOsoft_Android_Tablet/Resources/layout/LeveringOverzicht.axml
+++ b/KMOsoft_Android_Tablet/Resources/layout/LeveringOverzicht.axml
@@ -2,6 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:gridSpec="1|8|#0093eeff|K:#ee8700ff:16,l:72,l:16,r|S:#83ee00ff:16,0,l:16,56,l:16,0,r"
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <TextView
+        android:text="Leveringen Overzicht"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="48.0dp"
+        android:id="@+id/LeveringenPageTitle" />
 </LinearLayout>
