page switching works

--- a/KMOsoft_Android_Tablet/Resources/layout/Main.axml
+++ b/KMOsoft_Android_Tablet/Resources/layout/Main.axml
@@ -6,8 +6,8 @@
     android:minWidth="25px"
     android:minHeight="25px">
     <Button
-        android:text="Button"
+        android:text="Go To Leveringen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button1" />
+        android:id="@+id/leveringenBtn" />
 </LinearLayout>
