--- a/KMOsoft_Android_Tablet/Resources/layout/Main.axml
+++ b/KMOsoft_Android_Tablet/Resources/layout/Main.axml
@@ -7,7 +7,7 @@
     android:minHeight="25px">
     <Button
         android:text="Go To Leveringen"
-        android:layout_width="match_parent"
+        android:layout_width="300px"
         android:layout_height="wrap_content"
         android:id="@+id/leveringenBtn" />
 </LinearLayout>
