--- a/KMOsoft_Android_Tablet/Resources/layout/LeveringOverzicht.axml
+++ b/KMOsoft_Android_Tablet/Resources/layout/LeveringOverzicht.axml
@@ -17,5 +17,7 @@
         android:text="Retrieve Data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button1" />
+        android:id="@+id/getLeveringen" />
+  
+  
 </LinearLayout>
